@@ -9,7 +9,7 @@ package org.opendaylight.restconf.common.errors;
 
 import static java.util.Objects.requireNonNull;
 
-import com.google.common.collect.ImmutableList;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -37,9 +37,10 @@ import org.opendaylight.yangtools.yang.data.api.YangNetconfErrorAware;
  * @author Thomas Pantelis
  */
 public class RestconfDocumentedException extends WebApplicationException {
-    private static final long serialVersionUID = 1L;
+    @Serial
+    private static final long serialVersionUID = 2L;
 
-    private final ImmutableList<RestconfError> errors;
+    private final List<RestconfError> errors;
     private final Status status;
 
     /**
@@ -130,10 +131,9 @@ public class RestconfDocumentedException extends WebApplicationException {
         // this was lost also in original code.
         super(cause);
         if (!errors.isEmpty()) {
-            this.errors = ImmutableList.copyOf(errors);
+            this.errors = List.copyOf(errors);
         } else {
-            this.errors = ImmutableList.of(
-                new RestconfError(ErrorType.APPLICATION, ErrorTag.OPERATION_FAILED, message));
+            this.errors = List.of(new RestconfError(ErrorType.APPLICATION, ErrorTag.OPERATION_FAILED, message));
         }
 
         status = null;
@@ -154,19 +154,19 @@ public class RestconfDocumentedException extends WebApplicationException {
      *            the HTTP status.
      */
     public RestconfDocumentedException(final Status status) {
-        errors = ImmutableList.of();
+        errors = List.of();
         this.status = requireNonNull(status, "Status can't be null");
     }
 
     public RestconfDocumentedException(final Throwable cause, final RestconfError error) {
         super(cause, ErrorTags.statusOf(error.getErrorTag()));
-        errors = ImmutableList.of(error);
+        errors = List.of(error);
         status = null;
     }
 
     public RestconfDocumentedException(final Throwable cause, final List<RestconfError> errors) {
         super(cause, ErrorTags.statusOf(errors.get(0).getErrorTag()));
-        this.errors = ImmutableList.copyOf(errors);
+        this.errors = List.copyOf(errors);
         status = null;
     }
 
@@ -241,23 +241,24 @@ public class RestconfDocumentedException extends WebApplicationException {
      * @param cause Proposed cause of a RestconfDocumented exception
      */
     public static void throwIfYangError(final Throwable cause) {
-        if (cause instanceof YangNetconfErrorAware) {
-            throw new RestconfDocumentedException(cause, ((YangNetconfErrorAware) cause).getNetconfErrors().stream()
+        if (cause instanceof YangNetconfErrorAware infoAware) {
+            throw new RestconfDocumentedException(cause, infoAware.getNetconfErrors().stream()
                 .map(error -> new RestconfError(error.type(), error.tag(), error.message(), error.appTag(),
                     // FIXME: pass down error info
                     null, error.path()))
-                .collect(ImmutableList.toImmutableList()));
+                .toList());
         }
     }
 
     private static List<RestconfError> convertToRestconfErrors(final Collection<? extends RpcError> rpcErrors) {
-        final List<RestconfError> errorList = new ArrayList<>();
-        if (rpcErrors != null) {
-            for (RpcError rpcError : rpcErrors) {
-                errorList.add(new RestconfError(rpcError));
-            }
+        if (rpcErrors == null || rpcErrors.isEmpty()) {
+            return List.of();
         }
 
+        final var errorList = new ArrayList<RestconfError>();
+        for (var rpcError : rpcErrors) {
+            errorList.add(new RestconfError(rpcError));
+        }
         return errorList;
     }
 
